--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,8 @@
 Django==1.11.13
+django-environ==0.4.4
 django-filter==1.1.0
 djangorestframework==3.8.2
 Markdown==2.6.11
-psycopg2==2.7.4
+psycopg2-binary==2.7.4
 pytz==2018.4
 six==1.11.0
