--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,7 +1,12 @@
 FROM python:3
 ENV PYTHONUNBUFFERED 1
-RUN mkdir /code
-WORKDIR /code
-ADD . /code/
+
+RUN mkdir /server
+WORKDIR /server
+ADD . /server
 
 RUN pip install -r requirements.txt
+
+EXPOSE 8080
+
+ENTRYPOINT env `cat .env` && gunicorn -b :8080 heartsteps.wsgi
