Got app env working and deployed

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,5 +8,4 @@ ADD . /server
 RUN pip install -r requirements.txt
 
 EXPOSE 8080
-
-ENTRYPOINT env `cat .env` && gunicorn -b :8080 heartsteps.wsgi
+CMD gunicorn -b :8080 heartsteps.wsgi
