--- a/server/.env-server
+++ b/server/.env-server
@@ -1,7 +1,8 @@
 DEBUG=True
 ALLOWED_HOSTS='heartsteps-205523.appspot.com'
 SECRET_KEY='ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
-DATABASE_HOST='/cloudsql/heartsteps-205523:us-west1:heartsteps-test'
-DATABASE_PORT='5432'
-DATABASE_NAME='heartsteps'
-DATABASE_USER='heartsteps'
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=5432
+DATABASE_NAME=heartsteps
+DATABASE_USER=heartsteps
+DATABASE_PASSWORD=heartsteps
