Updated sample env files

--- a/server/.env-local
+++ b/server/.env-local
@@ -1,8 +1,8 @@
 # environmet variables for local development
 
 DEBUG=True
-ALLOWED_HOSTS='heartsteps-205523.appspot.com'
-SECRET_KEY='secret_key'
+ALLOWED_HOSTS=localhost,127.0.0.1
+SECRET_KEY=secret_key
 DATABASE_HOST=db
 DATABASE_PORT=5432
 DATABASE_NAME=postgres
