--- a/server/.env-server
+++ b/server/.env-server
@@ -1,6 +1,6 @@
 DEBUG=True
-ALLOWED_HOSTS='heartsteps-205523.appspot.com'
-SECRET_KEY='ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o'
+ALLOWED_HOSTS=heartsteps-205523.appspot.com
+SECRET_KEY="ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o"
 DATABASE_HOST=127.0.0.1
 DATABASE_PORT=5432
 DATABASE_NAME=heartsteps
