Got token checking logic to work

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,4 +4,7 @@ RUN mkdir client
 WORKDIR /client
 ADD . /client
 
+# enables live reload for windows
+ENV CHOKIDAR_USEPOLLING 1
+
 RUN npm install ionic sass -g
