--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "axios": "^0.18.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "node-sass": "^4.9.0",
