--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,11 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "dotenv": "^6.0.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "config":{
+     "ionic_webpack": "./config/webpack.config.js"
+  }
 }
