--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,14 @@ services:
 sudo: required
 
 install: 
+# install google cloud sdk
 - export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
 - echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
 - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
 - sudo apt-get update && sudo apt-get install google-cloud-sdk
 
 script:
+- cp .env-server .env
 - docker-compose build server
 - docker-compose build client
 
