--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ resources/android
 resources/ios
 www
 
+server/static
+
 app.yaml
 
 # Specifies intentionally untracked files to ignore when using Git
