--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,19 @@ install:
 - sudo apt-get update && sudo apt-get install google-cloud-sdk
 
 script:
-- cp .env-server .env
+- cp .env-server server/.env
 - docker-compose build server
 - docker-compose build client
 
-deploy:
-  provider: script
-  script: deploy.sh
-  on:
-    tags: true
-    all_branches: true
+after_success:
+# migrate database
+- docker-compose run server python3 manage.py migrate
+# upload server static files to gae
+- docker-compose run server python3 manage.py collectstatic
+- gsutil cp -r server/static gs://heartsteps-static
+# upload client web app to gae
+# deploy new server images to gae
+- docker tag heartsteps_server us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1
+- docker push us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1 -q
+- gcloud app deploy server/app.yaml --image-url=us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1 -q
+# upload ionic app to ionic pro
