Added travis-ci auth to build process

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ script:
 - docker-compose build client
 
 after_success:
+# login with gcloud
+- gcloud auth activate-service-account --key-file=gce.json
 # migrate database
 - docker-compose run server python3 manage.py migrate
 # upload server static files to gae
@@ -24,6 +26,6 @@ after_success:
 # upload client web app to gae
 # deploy new server images to gae
 - docker tag heartsteps_server us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1
-- docker push us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1 -q
+- docker push us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1
 - gcloud app deploy server/app.yaml --image-url=us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1 -q
 # upload ionic app to ionic pro
