--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,12 @@ script:
 after_success:
 # login with gcloud
 - gcloud auth activate-service-account --key-file=gce.json
+- gcloud auth configure-docker
 # migrate database
 - docker-compose run server python3 manage.py migrate
 # upload server static files to gae
 - docker-compose run server python3 manage.py collectstatic
-- gsutil cp -r server/static gs://heartsteps-static
+- gsutil rsync -R server/static gs://heartsteps-static
 # upload client web app to gae
 # deploy new server images to gae
 - docker tag heartsteps_server us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1
