--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ script:
 after_success:
 # login with gcloud
 - gcloud auth activate-service-account --key-file=gce.json
-- gcloud auth configure-docker
+- gcloud auth configure-docker -q
 # migrate database
 - docker-compose run server python3 manage.py migrate
 # upload server static files to gae
