Added static file env variable and re-added cors

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ after_success:
 - docker-compose run server python3 manage.py migrate
 # upload server static files to gae
 - docker-compose run server python3 manage.py collectstatic
-- gsutil rsync -R server/static gs://heartsteps-static
+- gsutil rsync -R server/static gs://${GAE_STATIC_BUCKET}
 # upload client web app to gae
 # deploy new server images to gae
 - docker tag heartsteps_server us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1
 - docker push us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1
-- gcloud app deploy server/app.yaml --image-url=us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1 -q
+- gcloud app deploy app.yaml --image-url=us.gcr.io/${GAE_PROJECT_ID}/heartsteps_server:v1 -q
 # upload ionic app to ionic pro
