--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3
 ENV PYTHONUNBUFFERED 1
 
+RUN apt-get update && \
+    apt-get install -y nginx supervisor
+
 # Create and add files to Docker
-RUN mkdir /server
 WORKDIR /server
 ADD . /server
 
@@ -10,11 +12,22 @@ ADD . /server
 RUN pip install -r requirements.txt
 
 # Load google sql dependency
-RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O /cloud_sql_proxy && \
-    chmod +x /cloud_sql_proxy
+RUN wget https://dl.google.com/cloudsql/cloud_sql_proxy.linux.amd64 -O /usr/local/bin/cloud_sql_proxy && \
+    chmod +x /usr/local/bin/cloud_sql_proxy
+
+# Used by Django to encrypt passwords & such
+ARG SECRET_KEY
+ENV SECRET_KEY $SECRET_KEY
+
+# Host name is used as allowed_host for django
+ARG HOST_NAME
+ENV HOST_NAME $HOST_NAME
+
+ARG GCLOUD_DB_INSTANCE
+ENV GCLOUD_DB_INSTANCE ${GCLOUD_DB_INSTANCE}
+
+ARG DATABASE_URL
+ENV DATABASE_URL ${DATABASE_URL}
 
 # Run the server
-EXPOSE 8080
-ENV GCLOUD_SQL_INSTANCE heartsteps-205523:us-west1:heartsteps-test
-CMD /cloud_sql_proxy -instances=${GCLOUD_SQL_INSTANCE}=tcp:5432 -credential_file=gce.json & \ 
-    gunicorn -b :8080 heartsteps.wsgi
+CMD supervisord -n -c supervisord.conf
