--- a/.env-local
+++ b/.env-local
@@ -1,10 +1,5 @@
 # environmet variables for local development
-
 DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+HOST_NAME=localhost
 SECRET_KEY=secret_key
-DATABASE_HOST=db
-DATABASE_PORT=5432
-DATABASE_NAME=postgres
-DATABASE_USER=postgres
-DATABASE_PASSWORD=
+DATABASE_URL=psql://postgres@db:5432/postgres
