--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ resources/ios
 www
 
 server/static
+server/supervisord.log
+server/supervisord.pid
+server/error.log
 
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
