--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:8
 
-RUN mkdir client
 WORKDIR /client
 ADD . /client
 
 # enables live reload for windows
 ENV CHOKIDAR_USEPOLLING 1
 
-RUN npm install ionic sass -g
+RUN npm install cordova ionic sass -g
+
+CMD npm install && \
+    ionic build
