--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,6 +7,5 @@ ADD . /client
 ENV CHOKIDAR_USEPOLLING 1
 
 RUN npm install cordova ionic sass -g
-
-CMD npm install -y && \
-    ionic build
+RUN npm install
+CMD ionic build --prod
