Changed nginx to allow all hosts

--- a/server/nginx.conf
+++ b/server/nginx.conf
@@ -6,7 +6,7 @@ http {
     server {
 
         listen      8080 default_server;
-        server_name localhost;
+        server_name _;
         charset     utf-8;
         include /etc/nginx/mime.types;
 
