Added debug to server build

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -29,5 +29,8 @@ ENV GCLOUD_DB_INSTANCE ${GCLOUD_DB_INSTANCE}
 ARG DATABASE_URL
 ENV DATABASE_URL ${DATABASE_URL}
 
+ARG DATABASE_URL
+ENV DATABASE_URL ${DATABASE_URL}
+
 # Run the server
 CMD supervisord -n -c supervisord.conf
