--- a/client/ionic.config.json
+++ b/client/ionic.config.json
@@ -4,5 +4,11 @@
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "proxies": [
+    {
+      "path": "/heartsteps-local",
+      "proxyUrl": "http://server:8080"
+    }
+  ]
 }
