Changed enroll endpoint to use rest_framework class and moved behind /api path

--- a/client/ionic.config.json
+++ b/client/ionic.config.json
@@ -8,7 +8,7 @@
   "proxies": [
     {
       "path": "/heartsteps-local",
-      "proxyUrl": "http://server:8080"
+      "proxyUrl": "http://server:8080/api"
     }
   ]
 }
