--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
+    "@ionic-native/firebase": "^4.8.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.11",
     "axios": "^0.18.0",
+    "cordova-plugin-firebase": "^1.0.5",
+    "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "node-sass": "^4.9.0",
@@ -39,7 +43,13 @@
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
-  "config":{
-     "ionic_webpack": "./config/webpack.config.js"
+  "config": {
+    "ionic_copy": "./config/ionic-copy-config.js",
+    "ionic_webpack": "./config/webpack.config.js"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-firebase": {}
+    }
   }
 }
