Cleaned up HEARTSTEPS_URL environment variable

--- a/client/ionic.config.json
+++ b/client/ionic.config.json
@@ -7,7 +7,7 @@
   },
   "proxies": [
     {
-      "path": "/heartsteps-local",
+      "path": "/api",
       "proxyUrl": "http://server:8080/api"
     }
   ],
