Added fcm_django and device registration endpoint

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,10 +1,18 @@
+certifi==2018.4.16
+chardet==3.0.4
 Django==1.11.13
 django-environ==0.4.4
 django-filter==1.1.0
+django-uuidfield==0.5.0
 djangorestframework==3.8.2
+fcm-django==0.2.19
 gunicorn==19.8.1
+idna==2.7
 Markdown==2.6.11
 psycopg2-binary==2.7.4
+pyfcm==1.4.5
 pytz==2018.4
 requests==2.19.1
+requests-toolbelt==0.8.0
 six==1.11.0
+urllib3==1.23
