--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,13 @@
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
     "axios": "^0.18.0",
+    "cordova-android": "7.0.0",
+    "cordova-plugin-device": "2.0.2",
     "cordova-plugin-firebase": "^1.0.5",
+    "cordova-plugin-ionic-keyboard": "2.0.5",
+    "cordova-plugin-ionic-webview": "1.1.19",
+    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-whitelist": "1.3.3",
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -49,7 +55,15 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-firebase": {}
-    }
+      "cordova-plugin-firebase": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
