Configure to run without nginx for now

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -12,4 +12,5 @@ ADD . /server
 RUN pip install -r requirements.txt
 
 # Run the server
-CMD supervisord -n -c supervisord.conf
+CMD gunicorn -b :8080 heartsteps.wsgi:application
+#CMD supervisord -n -c supervisord.conf
