--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ server/supervisord.log
 server/supervisord.pid
 server/error.log
 
+static/app
+static/static
+
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
