--- a/client/package.json
+++ b/client/package.json
@@ -22,13 +22,14 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/firebase": "^4.8.0",
+    "@ionic-native/firebase": "^4.9.1",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "angularfire2": "^5.0.0-rc.11",
     "axios": "^0.18.0",
     "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-ionic-keyboard": "2.0.5",
@@ -63,7 +64,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
