--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/firebase": "^4.9.1",
+    "@ionic-native/http": "^4.9.1",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
@@ -30,11 +31,14 @@
     "axios": "^0.18.0",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-ionic-keyboard": "2.0.5",
     "cordova-plugin-ionic-webview": "1.1.19",
     "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
@@ -42,6 +46,7 @@
     "node-sass": "^4.9.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "url-join": "^4.0.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
@@ -61,7 +66,9 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-statusbar": {}
     },
     "platforms": [
       "android",
