--- a/activity-suggestion/Dockerfile
+++ b/activity-suggestion/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.6
 ENV PYTHONUNBUFFERED 1
 
+RUN apt-get update && \
+    apt-get install -y r-base
+
 # Create and add files to Docker
 WORKDIR /activity-suggestion
 ADD . /activity-suggestion
@@ -8,5 +11,8 @@ ADD . /activity-suggestion
 #Load python dependencies
 RUN pip install -r requirements.txt
 
+#Load R dependencies
+RUN Rscript install.r
+
 # Run the server
-#CMD supervisord -n -c supervisord.conf
+CMD gunicorn -b 0.0.0.0:8080 wsgi
