Added app worker and configuration for supervisor

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.6
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update && \
-    apt-get install -y nginx supervisor erlang rabbitmq-server
+    apt-get install -y supervisor erlang rabbitmq-server
 
 # Create and add files to Docker
 WORKDIR /server
