--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -1,9 +1,9 @@
 [supervisord]
 nodaemon=true
 
-[program:gunicorn]
-command=/usr/local/bin/gunicorn -b unix:/app.sock heartsteps.wsgi:application
+[program:celery]
+command=/usr/local/bin/celery -A heartsteps worker -l info
 directory=/server
 
-[program:nginx]
-command=/usr/sbin/nginx -c /server/nginx.conf
+[program:rabbitmq]
+command=rabbitmq-server start
