--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,11 @@ after_success:
 # collect static files for server
 - docker-compose run server python manage.py collectstatic
 - cp -r server/static static
+# Migrate database
+- docker-compose -f docker-compose.yaml -f docker-compose.gcloud.yml run server python manage.py migrate
 # login with gcloud
-- gcloud auth activate-service-account --key-file=gce.json
+- gcloud auth activate-service-account --key-file=credentials/gce.json
 - gcloud auth configure-docker -q
 - gcloud config set project ${GAE_PROJECT_ID}
 # upload client web app to gae
 - gcloud app deploy -q -v master server/app.yaml static/app.yaml dispatch.yaml
-# upload ionic app to ionic pro
