--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -1,5 +1,4 @@
 [supervisord]
-nodaemon=true
 
 [program:celery]
 command=/usr/local/bin/celery -A heartsteps worker -l info
@@ -7,3 +6,7 @@ directory=/server
 
 [program:rabbitmq]
 command=rabbitmq-server start
+
+[program:gunicorn]
+command=gunicorn -b :8080 heartsteps.wsgi:application
+directory=/server
