--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ install:
 - sudo apt-get update && sudo apt-get install google-cloud-sdk
 
 script:
-- docker-compose run server python manage.py test
+# Django now requires rabbitmq to run
+- docker-compose run server bash -c "service rabbitmq-server start && python manage.py test"
 # Build client (for now)
 - docker-compose run client npm install
 - docker-compose run client ionic build --prod
