Behavioral messages draft 2

--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -1,8 +1,10 @@
 [supervisord]
 
 [program:celery]
-command=/usr/local/bin/celery -A heartsteps worker -l info
+command=/usr/local/bin/celery -A heartsteps worker -l info -E
 directory=/server
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 
 [program:rabbitmq]
 command=rabbitmq-server start
@@ -10,3 +12,5 @@ command=rabbitmq-server start
 [program:gunicorn]
 command=gunicorn -b :8080 heartsteps.wsgi:application
 directory=/server
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
