--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,6 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^5.0.0-rc.11",
     "axios": "^0.18.0",
     "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
@@ -76,8 +75,8 @@
       }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
