--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -11,6 +11,8 @@ django-filter==1.1.0
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 fcm-django==0.2.19
+geographiclib==1.49
+geopy==1.16.0
 gunicorn==19.8.1
 idna==2.7
 kombu==4.2.1
