--- a/server/supervisord.conf
+++ b/server/supervisord.conf
@@ -1,13 +1,13 @@
 [supervisord]
 
 [program:celery]
-command=/usr/local/bin/celery -A heartsteps worker -l info -E
+command=/usr/local/bin/celery -A heartsteps worker -l info -E -B
 directory=/server
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:rabbitmq]
-command=rabbitmq-server start
+command=service rabbitmq-server start
 
 [program:gunicorn]
 command=gunicorn -b :8080 heartsteps.wsgi:application
