--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.6
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update && \
-    apt-get install -y supervisor erlang rabbitmq-server
+    apt-get install -y erlang rabbitmq-server
 
 # Create and add files to Docker
 WORKDIR /server
@@ -12,4 +12,4 @@ ADD . /server
 RUN pip install -r requirements.txt
 
 # Run the server
-CMD supervisord -n -c supervisord.conf
+CMD honcho start web celery rabbitmq
