--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -10,9 +10,11 @@ django-environ==0.4.4
 django-filter==1.1.0
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
+fcm-django==0.2.19
 geographiclib==1.49
 geopy==1.16.0
 gunicorn==19.8.1
+honcho==1.0.1
 idna==2.7
 kombu==4.2.1
 Markdown==2.6.11
