Change deployed database

--- a/docker-compose.gcloud.yaml
+++ b/docker-compose.gcloud.yaml
@@ -10,7 +10,7 @@ services:
   server:
     build: ./server
     environment:
-      - DATABASE_URL=psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-205523:us-west1:heartsteps-test
+      - DATABASE_URL=psql://heartsteps:heartsteps@/heartsteps-master?host=/cloudsql/heartsteps-205523:us-west1:heartsteps-test
     command: python3 manage.py runserver 0.0.0.0:8080
     volumes:
       - ./server:/server
