--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -8,6 +8,7 @@ django-celery-beat==1.1.1
 django-celery-results==1.0.1
 django-environ==0.4.4
 django-filter==1.1.0
+django-fitbit==0.3.0
 django-uuidfield==0.5.0
 djangorestframework==3.8.2
 fcm-django==0.2.19
