--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,11 +11,11 @@ services:
       - SECRET_KEY=secret_key
       - DATABASE_URL=psql://postgres@db:5432/postgres
       - FCM_SERVER_KEY=AAAA4ZxgfMQ:APA91bHz1XoVQPQrR19dVkn6cxl1A6ULe9tYLLFUH7G0mUzxxlrml2r5GZCsgn3MCduIKIKtV7-Di8egsm2lwjqD9aWPVDfyt8omWRYFr6RprULdrva9fSyaoe1LrI9nZ7Bokay38_7NZW-YY5_KcyBSr5j5pVEmdA
-      - FITAPP_CONSUMER_KEY='22CXYZ'
-      - FITAPP_CONSUMER_SECRET='3dccdbe583e49949b77d3f91a32064ef'
+      - FITAPP_CONSUMER_KEY='22CY6Y'
+      - FITAPP_CONSUMER_SECRET='8946c18e05b01acc82dd9947e39583c9'
       - FITAPP_SUBSCRIBE=True
       - FITAPP_SUBSCRIBER_ID=1
-      - FITAPP_VERIFICATION_CODE='271b6767cb997d86917a041b1693e2289510676613fe01df0306cbb24ef19d67'
+      - FITAPP_VERIFICATION_CODE='41cc924fedb3f59d8f6f044bf28967f05a74c6e980ad0d985f1562864952ea33'
 
     command: honcho start web_dev celery rabbitmq
     volumes:
