--- a/client/GoogleService-Info.plist
+++ b/client/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>968991210692-md8i51vfigudgvmdiu9tdcev4j36ro3r.apps.googleusercontent.com</string>
+	<string>50745768851-23s2oprqm604e4odn0a0pf2v1lk907j1.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.968991210692-md8i51vfigudgvmdiu9tdcev4j36ro3r</string>
+	<string>com.googleusercontent.apps.50745768851-23s2oprqm604e4odn0a0pf2v1lk907j1</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBTCSUJgnEYPeTf-kyicK8B5AUDNIWAQD4</string>
+	<string>AIzaSyBy-khUshex2UVe7A1UReSKuFssht57J2E</string>
 	<key>GCM_SENDER_ID</key>
-	<string>968991210692</string>
+	<string>50745768851</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.nickreid.heartsteps</string>
 	<key>PROJECT_ID</key>
-	<string>heartsteps-205523</string>
+	<string>heartsteps-kpwhri</string>
 	<key>STORAGE_BUCKET</key>
-	<string>heartsteps-205523.appspot.com</string>
+	<string>heartsteps-kpwhri.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:968991210692:ios:ed7fc7cb37cf2ab1</string>
+	<string>1:50745768851:ios:ed7fc7cb37cf2ab1</string>
 	<key>DATABASE_URL</key>
-	<string>https://heartsteps-205523.firebaseio.com</string>
+	<string>https://heartsteps-kpwhri.firebaseio.com</string>
 </dict>
 </plist>
