--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,6 +10,13 @@
     ],
     "module": "es2015",
     "moduleResolution": "node",
+    "baseUrl": "src",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@heartsteps/*": ["heartsteps/*"],
+      "@infrastructure/*": ["infrastructure/*"],
+      "@pages/*": ["pages/*"]
+    },
     "sourceMap": true,
     "target": "es5"
   },
