--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
