--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -28,6 +28,7 @@ pytz==2018.4
 requests==2.19.1
 requests-oauthlib==1.0.0
 requests-toolbelt==0.8.0
+Shapely==1.6.4.post2
 simplejson==3.16.0
 six==1.11.0
 urllib3==1.23
