--- a/client/package.json
+++ b/client/package.json
@@ -30,12 +30,14 @@
     "@ionic/storage": "2.1.3",
     "axios": "^0.18.0",
     "cordova-android": "7.0.0",
+    "cordova-inappbrowser": "^1.0.6",
     "cordova-ios": "4.5.4",
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "2.0.5",
     "cordova-plugin-ionic-webview": "1.1.19",
     "cordova-plugin-splashscreen": "5.0.2",
@@ -73,7 +75,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To tailor messages to your location"
-      }
+      },
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "ios",
