--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ sudo: required
 
 install: 
 # install google cloud sdk
-- export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
-- echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-- curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
-- sudo apt-get update && sudo apt-get install google-cloud-sdk
+# - export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
+# - echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+# - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+# - sudo apt-get update && sudo apt-get install google-cloud-sdk
 
 script:
 - docker-compose run server python manage.py test
