--- a/client/package.json
+++ b/client/package.json
@@ -31,21 +31,22 @@
     "axios": "^0.18.0",
     "cordova-android": "7.0.0",
     "cordova-inappbrowser": "^1.0.6",
-    "cordova-ios": "4.5.4",
+    "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "^1.11.1",
-    "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic-keyboard": "2.0.5",
-    "cordova-plugin-ionic-webview": "1.1.19",
-    "cordova-plugin-splashscreen": "5.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "1.3.3",
+    "cordova-plugin-whitelist": "^1.3.3",
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ios-deploy": "^1.9.3",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "rxjs": "5.5.11",
@@ -79,8 +80,8 @@
       "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
