--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@ionic-native/core": "4.7.0",
-    "@ionic-native/firebase": "^4.9.1",
     "@ionic-native/geolocation": "^4.9.2",
     "@ionic-native/http": "^4.9.1",
+    "@ionic-native/push": "^4.14.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
@@ -35,7 +35,6 @@
     "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
-    "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
@@ -55,6 +54,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "@types/node": "^10.10.1",
     "dotenv": "^6.0.0",
     "typescript": "~2.6.2"
   },
@@ -65,7 +65,6 @@
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-firebase": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
@@ -76,11 +75,11 @@
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "To tailor messages to your location"
       },
-      "cordova-plugin-inappbrowser": {}
+      "cordova-plugin-inappbrowser": {},
+      "phonegap-plugin-push": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "android"
     ]
   }
 }
