--- a/fitbit/package.json
+++ b/fitbit/package.json
@@ -14,8 +14,10 @@
     "iconFile": "resources/icon.png",
     "wipeColor": "#0000ff",
     "requestedPermissions": [
+      "access_activity",
       "access_internet",
-      "access_location"
+      "access_location",
+      "run_background"
     ],
     "buildTargets": [
       "higgs",
