--- a/client/package.json
+++ b/client/package.json
@@ -21,10 +21,12 @@
     "@angular/http": "5.2.10",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
-    "@ionic-native/core": "4.7.0",
+    "@ionic-native/core": "4.11.0",
     "@ionic-native/geolocation": "^4.9.2",
     "@ionic-native/http": "^4.9.1",
+    "@ionic-native/in-app-browser": "^4.15.0",
     "@ionic-native/push": "^4.14.0",
+    "@ionic-native/safari-view-controller": "^4.15.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
@@ -39,6 +41,7 @@
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-safariviewcontroller": "^1.5.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -76,7 +79,8 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To tailor messages to your location"
       },
       "cordova-plugin-inappbrowser": {},
-      "phonegap-plugin-push": {}
+      "phonegap-plugin-push": {},
+      "cordova-plugin-safariviewcontroller": {}
     },
     "platforms": [
       "android"
