Turned on debug in server

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -3,6 +3,7 @@ env: flex
 service: heartsteps-server
 
 env_variables:
+  DEBUG: True
   HOST_NAME: heartsteps-kpwhri.appspot.com
   SECRET_KEY: ka6p=i&71njyh)hw%amk)p1)(a=u$#gpck-8!%^^51f^7g7b8o
   DATABASE_URL: psql://heartsteps:heartsteps@/heartsteps?host=/cloudsql/heartsteps-kpwhri:us-west2:heartsteps-dev
