--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,8 @@ services:
       - pgdata:/var/lib/postgresql/data
   server:
     build: ./server
-    environment:
-      - DEBUG=True
-      - HOST_NAME=localhost,server
-      - SECRET_KEY=secret_key
-      - DATABASE_URL=psql://postgres@db:5432/postgres
-      - FCM_SERVER_KEY=AAAAC9Cu-5M:APA91bEzy1tI3Ml_ROJGmABfdC5PJvpcCA2LqH4aRaHqBw4EDcViLkaTpgnDu1pY6kb79gSDcl_oTFAMLC4FgMiKgIx7GI0P4FgqDWfXYXW6sdq9B05WRmY91FXRsIriKNNa6x2IFWYC
-      - FITAPP_CONSUMER_KEY=22CY6Y
-      - FITAPP_CONSUMER_SECRET=8946c18e05b01acc82dd9947e39583c9
-      - FITAPP_SUBSCRIBE=True
-      - FITAPP_SUBSCRIBER_ID=1
-      - FITAPP_VERIFICATION_CODE=41cc924fedb3f59d8f6f044bf28967f05a74c6e980ad0d985f1562864952ea33
+    env_file:
+      - .env-development 
     command: honcho start web_dev celery rabbitmq
     volumes:
       - ./server:/server
@@ -27,6 +18,8 @@ services:
       - db
   client:
     build: ./client
+    env_file:
+      - .env-development
     command: ionic serve
     volumes:
       - ./client:/client
