--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "cordova-inappbrowser": "^1.0.6",
     "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
@@ -80,7 +81,10 @@
       },
       "cordova-plugin-inappbrowser": {},
       "phonegap-plugin-push": {},
-      "cordova-plugin-safariviewcontroller": {}
+      "cordova-plugin-safariviewcontroller": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "comnickreidheartsteps"
+      }
     },
     "platforms": [
       "android"
