--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/geolocation": "^4.9.2",
     "@ionic-native/http": "^4.9.1",
     "@ionic-native/in-app-browser": "^4.15.0",
+    "@ionic-native/onesignal": "^4.15.0",
     "@ionic-native/push": "^4.14.0",
     "@ionic-native/safari-view-controller": "^4.15.0",
     "@ionic-native/splash-screen": "4.7.0",
@@ -51,6 +52,7 @@
     "ionicons": "3.0.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
+    "onesignal-cordova-plugin": "^2.4.4",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "url-join": "^4.0.0",
@@ -80,11 +82,11 @@
         "GEOLOCATION_USAGE_DESCRIPTION": "To tailor messages to your location"
       },
       "cordova-plugin-inappbrowser": {},
-      "phonegap-plugin-push": {},
       "cordova-plugin-safariviewcontroller": {},
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "comnickreidheartsteps"
-      }
+      },
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
