--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "cordova-inappbrowser": "^1.0.6",
     "cordova-ios": "4.5.5",
     "cordova-plugin-advanced-http": "^1.11.1",
+    "cordova-plugin-background-fetch": "^5.4.1",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
@@ -117,7 +118,8 @@
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "comnickreidheartsteps"
       },
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-background-fetch": {}
     },
     "platforms": [
       "android"
