--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -18,7 +18,9 @@ gunicorn==19.8.1
 honcho==1.0.1
 idna==2.7
 kombu==4.2.1
+kwargs-only==1.0.0
 Markdown==2.6.11
+numpy==1.15.2
 oauthlib==2.1.0
 psycopg2-binary==2.7.4
 pyfcm==1.4.5
@@ -30,5 +32,6 @@ requests-toolbelt==0.8.0
 Shapely==1.6.4.post2
 simplejson==3.16.0
 six==1.11.0
+timezonefinder==3.1.0
 urllib3==1.23
 vine==1.1.4
