Added stubbed out versions of calls to activity suggestion service

--- a/.env-development
+++ b/.env-development
@@ -7,3 +7,4 @@ FCM_SERVER_KEY=AAAAC9Cu-5M:APA91bEzy1tI3Ml_ROJGmABfdC5PJvpcCA2LqH4aRaHqBw4EDcViL
 ONESIGNAL_APP_ID=596839e2-59bf-4fcb-bc55-a6154b8403d8
 ONESIGNAL_API_KEY=MDUxMzVkMzEtYjg3NS00MTNlLWFlYjQtNmJiNWM0NDkzMDNm
 HEARTSTEPS_URL=/api
+ACTIVITY_SUGGESTION_SERVICE_URL=http://activity-suggestion:8000/
