--- a/client/package.json
+++ b/client/package.json
@@ -72,6 +72,7 @@
     "dotenv": "^6.0.0",
     "jest": "^23.6.0",
     "jest-preset-angular": "^6.0.1",
+    "tslint": "^5.11.0",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project",
