--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "d3": "^5.7.0",
     "firebase": "^5.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -65,6 +66,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "@types/d3": "^5.0.1",
     "@types/jest": "^23.3.3",
     "@types/node": "^10.10.1",
     "cordova-icon": "^1.0.0",
