Clarify timezone in antiseds; add birthYears to fixtures

--- a/fitbit/package.json
+++ b/fitbit/package.json
@@ -15,6 +15,7 @@
     "wipeColor": "#0000ff",
     "requestedPermissions": [
       "access_activity",
+      "access_heart_rate",
       "access_internet",
       "access_location",
       "run_background"
