--- a/fitbit/package.json
+++ b/fitbit/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "fitbit-heartsteps",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "license": "UNLICENSED",
   "devDependencies": {
-    "@fitbit/sdk": "^2.0.2",
-    "@fitbit/sdk-cli": "^1.0.2"
+    "@fitbit/sdk": "~1.0.4",
+    "@fitbit/sdk-cli": "^1.0.2",
+    "fitbit-sdk-types": "^2.0.2"
   },
   "fitbit": {
     "appUUID": "39992ebd-00e7-4cee-bf48-67af6d0b725a",
