--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,15 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@angular/animations": "5.2.10",
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.2.1",
     "@angular/common": "5.2.10",
     "@angular/compiler": "5.2.10",
     "@angular/compiler-cli": "5.2.10",
     "@angular/core": "5.2.10",
     "@angular/forms": "5.2.10",
     "@angular/http": "5.2.10",
+    "@angular/material": "^5.2.1",
     "@angular/platform-browser": "5.2.10",
     "@angular/platform-browser-dynamic": "5.2.10",
     "@angular/router": "^5.2.10",
